Closed Bug 1638873 Opened 5 years ago Closed 5 years ago

CanvasEventRingBuffer::ReadNextEvent can loop if ReadElement fails after checkpoint.

Categories

(Core :: Graphics: Canvas2D, defect, P1)

All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- disabled
firefox76 --- disabled
firefox77 --- disabled
firefox78 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

Attachments

(1 file)

I found this while killing the content process trying to reproduce a different problem.

Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8e9afbc5d948 Check buffer is good before reading next event after checkpoint in CanvasEventRingBuffer::ReadNextEvent. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: