Bug 1638873: Check buffer is good before reading next event after checkpoint in CanvasEventRingBuffer::ReadNextEvent. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D75812